#8 - add test to HttpResponseWriter and HttpParser